--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,26 +1,29 @@
 NAME = philo
-SRCS_DIR = src/
-SRCS_LIST = \
+SRCS_DIR = src
+OBJS_DIR = obj
+SRCS_FILES = \
 	main.c \
 	init.c \
 	process.c \
 	utils.c \
 	monitor.c
-SRCS = $(addprefix $(SRCS_DIR), $(SRCS_LIST))
-OBJS = $(SRCS:.c=.o)
+# SRCS = $(addprefix $(SRCS_DIR)/, $(SRCS_FILES))
+# SRCS = $(SRCS_FILES)=$(SRCS_DIR)/%.c
+OBJS = $(SRCS_FILES:%.c=$(OBJS_DIR)/%.o)
 FLAGS = -Wall -Werror -Wextra -pthread
 INC = -I ./inc
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CC) $(FLAGS) $(INC) $(SRCS) -o $(NAME)
+	$(CC) $(FLAGS) $^ -o $@
 
-%.o: %.c
-	$(CC) -c $(INC) $< -o $@
+$(OBJS_DIR)/%.o: $(SRCS_DIR)/%.c
+	@mkdir -p obj
+	$(CC) $(INC) -c $< -o $@
 
 clean:
-	rm -f $(OBJS)
+	rm -drf $(OBJS_DIR)
 
 fclean: clean
 	rm -f $(NAME)
