--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,29 +1,27 @@
 NAME = philo
-SRCS_DIR = src
-OBJS_DIR = obj
-SRCS_FILES = \
+SRC_DIR = src/
+SRC = \
 	main.c \
 	init.c \
 	process.c \
 	utils.c \
 	monitor.c
-# SRCS = $(addprefix $(SRCS_DIR)/, $(SRCS_FILES))
-# SRCS = $(SRCS_FILES)=$(SRCS_DIR)/%.c
-OBJS = $(SRCS_FILES:%.c=$(OBJS_DIR)/%.o)
+OBJ_DIR = obj/
+OBJ = $(SRC:%.c=$(OBJ_DIR)%.o)
 FLAGS = -Wall -Werror -Wextra -pthread
 INC = -I ./inc
 
 all: $(NAME)
 
-$(NAME): $(OBJS)
+$(NAME): $(OBJ)
 	$(CC) $(FLAGS) $^ -o $@
 
-$(OBJS_DIR)/%.o: $(SRCS_DIR)/%.c
-	@mkdir -p obj
-	$(CC) $(INC) -c $< -o $@
+$(OBJ_DIR)%.o: $(SRC_DIR)%.c
+	@mkdir -p $(OBJ_DIR)
+	$(CC) $(FLAGS) $(INC) -c $< -o $@
 
 clean:
-	rm -drf $(OBJS_DIR)
+	rm -rdf $(OBJ_DIR)
 
 fclean: clean
 	rm -f $(NAME)
