--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -1,26 +1,27 @@
 NAME = philo_bonus
-SRCS_DIR_BONUS = src_bonus/
-SRCS_LIST_BONUS = \
+SRC_DIR = src/
+SRC = \
 	main_bonus.c \
 	utils_bonus.c \
 	init_bonus.c \
 	child_bonus.c \
 	parent_bonus.c
-SRCS_BONUS = $(addprefix $(SRCS_DIR_BONUS), $(SRCS_LIST_BONUS))
-OBJS_BONUS = $(SRCS_BONUS:.c=.o)
+OBJ_DIR = obj/
+OBJ = $(SRC:%.c=$(OBJ_DIR)%.o)
 FLAGS = -Wall -Werror -Wextra -pthread
-INC_BONUS = -I ./inc_bonus
+INC = -I ./inc
 
 all: $(NAME)
 
-$(NAME): $(OBJS_BONUS)
-	$(CC) $(FLAGS) $(INC_BONUS) $(SRCS_BONUS) -o $(NAME)
+$(NAME): $(OBJ)
+	$(CC) $(FLAGS) $^ -o $@
 
-%.o: %.c
-	$(CC) -c $(INC_BONUS) $< -o $@
+$(OBJ_DIR)%.o: $(SRC_DIR)%.c
+	@mkdir -p $(OBJ_DIR)
+	$(CC) $(FLAGS) $(INC) -c $< -o $@
 
 clean:
-	rm -f $(OBJS_BONUS)
+	rm -rdf $(OBJ_DIR)
 
 fclean: clean
 	rm -f $(NAME)
